ENGAGE-498: Fixing up the classnames so there are separate ones for sytling and dom selection. Also changed the styling a bit so that the info text is on a new line and will have ellipsis if too long.
svn path=/scratchpad/mobile-workshop/trunk/; revision=9634

--- a/examples/cabinet/css/cabinetDemo.css
+++ b/examples/cabinet/css/cabinetDemo.css
@@ -29,3 +29,11 @@
 .demo-tags {
     margin: 20px;
 }
+
+.demo-info-text {
+    display: block;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    width: auto;
+}
